alignment fixes

--- a/src/Assets/importExport.css
+++ b/src/Assets/importExport.css
@@ -82,7 +82,12 @@
 
 ::placeholder {
   color: #888888;
-  font-size: 16px;
+  font-size: 18px;
+}
+
+.group-icon {
+  align-self: center;
+  margin-top: -3px;
 }
 
 .import-export .bottom-option {
@@ -108,6 +113,16 @@
   margin-left: 10px;
 }
 
+.import-export .bottom-option .bottom-input input {
+  width: 100%;
+  height: 100%;
+  font-size: 16px;
+}
+
+.bottom-input svg {
+  align-self: center;
+}
+
 .import-export .bottom-option .bottom-input select {
   width: 100%;
   font-size: 16px;
@@ -116,6 +131,11 @@
 @media screen and (max-width: 400px) {
   .import-export {
     padding: 20px;
+  }
+
+  .group-icon {
+    align-self: center;
+    margin-top: -5px;
   }
 }
 
@@ -140,12 +160,6 @@
     grid-template-columns: 1fr;
   }
 }
-
-/* @media screen and (max-width: 330px) {
-  .import-export .top-option .locat-dir {
-    max-width: 240px;
-  }
-} */
 
 @media screen and (min-width: 1000px) and (max-width: 1199px) {
   .import-export .top-option {
